# shareloop

./: .gitignore  .ignore  AGENTS.md  AUTH_TASK.md  README.md  TASK.md  TODO.md  compose.yaml  mise.toml
server/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  gleam.toml  manifest.toml  nori.config.yaml  oaspec.yaml  pyproject.toml  requirements.txt  seed.py
server/alembic/: env.py
server/alembic/versions/: 0369874035aa_remove_address_from_items.py  2a1b6c8d9e0f_add_address_to_items.py  31355a65fd69_add_follows_table.py  3bb5555fb8a7_add_price_per_day_to_items.py  66c06292899e_merge_profile_srceen_and_feature_theme.py  91b3e29fa96f_add_avatar_uuid_to_profiles.py  933850ea0c37_make_price_per_day_not_null.py  d9a73830900c_initial.py
server/db/: gleam.toml  manifest.toml
server/db/priv/migrations/: 20260513000000-create_items.sql  20260515000000-add_items_location.sql  20260516000000-add_item_city.sql  20260516000001-create_users.sql  20260516000002-create_sessions.sql  20260530170900-create_profile.sql  20260617000001-create_messages.sql  20260617000002-create_rent_offers.sql  20260617000003-add_offer_fks_to_rent_requests.sql  20260619000000-add_timestamp_indexes.sql  20260621000000-add_category_to_items.sql
server/db/src/server/: migration.gleam
server/priv/migrations/: 20260513000000-create_items.sql  20260516000002-create_sessions.sql  20260516000003-add_refresh_tokens.sql  20260530180900-add_profile_to_items.sql  20260602000000-create_item_images.sql  20260617000000-create_rent_requests.sql  20260619000001-add_read_tracking.sql
server/seeding/: data.yaml
server/src/: auth_ffi.erl  config.py  database.py  dependencies.py  main.py  server.gleam
server/src/auth/: password.py  tokens.py
server/src/cli/: main.py
server/src/db/: models.py
server/src/handlers/: auth.py  images.py  items.py  ratings.py  renting.py  seeding.py  users.py
server/src/models/: base.py  openapi.py
server/src/notifications/: registry.py
server/src/openapi/: decode.gleam  encode.gleam  handlers.gleam  handlers_generated.gleam  request_types.gleam  response_types.gleam  router.gleam  types.gleam
server/src/seeding/: engine.py  reader.py  state.py
server/src/server/: api.gleam  auth.gleam  config.gleam  consts.gleam  db.gleam  error.gleam  featured_items.gleam  images.gleam  items.gleam  migration.gleam  notifications.gleam  parser.gleam  renting.gleam  search.gleam  seed.gleam  seed.gleam.bak  sql.gleam
server/src/services/: featured_items.py  rating_common.py  ratings.py  renting.py  search.py
server/test/server/: cli.gleam
(+143 files in other folders)
